5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1573_1560.log
== SUBMITION (2019-03-13 14:11:35) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.12702
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
                                                                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:12:46) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.158905
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace nasceu em 1815, na Inglaterra.".lower())
                                                                                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:13:04) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.154424
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:13:16) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace nasceu em 1815, na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:13:42) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.129654
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
